argo-apps/confluence/prod/templates/confluence-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confluence
  namespace: confluence-prod
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: confluence-prod.catena-x.polygran.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: confluence-prod
                port:
                  number: 80
